<resources>
    <string name="app_name">Affiliate</string>
    <string name="profile">Profile</string>
    <string name="store">Store</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fashion">Fashion</string>
    <string name="electric">Electric</string>
    <string name="shopping">Shop</string>
    <string name="food">Food</string>
    <string name="education">Educate</string>
    <string name="entertainment">Entertain</string>
    <string name="grocery">Grocery</string>
    <string name="health">Health</string>
    <string name="hotel">Hotel</string>
    <string name="travel">Travel</string>
    <string name="shop">Shopping</string>
    <string name="cab">Cab</string>
    <string name="settings">Settings</string>
</resources>