<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    android:layout_margin="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Top Categories"
            android:fontFamily="@font/librebaskervillebold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/app"
            />

        <HorizontalScrollView
            android:scrollbars="none"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/fas"
                    android:layout_width="0dp"
                    android:padding="4dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/fashion"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/fashion"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"/>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ele"
                    android:padding="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/electric"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/electric"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"/>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shop"
                    android:padding="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/shopping"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/shopping"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"/>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/food"
                    android:padding="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/food"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/food"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"/>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edu"
                    android:padding="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/education"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/education"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"/>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ent"
                    android:padding="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/ent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/entertainment"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"/>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gro"
                    android:padding="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/grocery"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/grocery"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"/>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/health"
                    android:padding="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/health"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/health"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"/>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hot"
                    android:padding="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/hotelbell"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/hotel"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"/>



                </LinearLayout>


                <LinearLayout
                    android:id="@+id/tra"
                    android:layout_marginEnd="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp"
                    android:layout_weight="1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/travel"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/travel"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"/>



                </LinearLayout>



            </LinearLayout>

        </HorizontalScrollView>


    </LinearLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <androidx.viewpager2.widget.ViewPager2
          android:id="@+id/image_slider"
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:layout_centerInParent="true" />

      <LinearLayout
          android:id="@+id/dots_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="5dp"
          android:gravity="center_horizontal|center_vertical"
          android:orientation="horizontal" />
  </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Compare"
        android:fontFamily="@font/librebaskervillebold"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/app"
        />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/shopping"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shopping"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/shop"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="18sp"/>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/cabs"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cab"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/cab"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="18sp"/>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/foods"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/foods"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/food"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="18sp"/>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/hol"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/hote"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/hotel"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="18sp"/>



            </LinearLayout>


        </LinearLayout>



    </HorizontalScrollView>
</LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Offers"
                android:layout_weight="1"
                android:fontFamily="@font/librebaskervillebold"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/app"
                />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:reverseLayout="true"
            app:stackFromEnd="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:id="@+id/Offers"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="75dp"/>




    </LinearLayout>
</ScrollView>